--- a/.github/workflows/update-history.yml
+++ b/.github/workflows/update-history.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Fetch delegations
-        run: node scripts/fetch_delegations.js > data/current.json
+        run: node scripts/fetch_delegations.js
 
       - name: Merge history
         run: node scripts/merge_history.js
