--- a/.github/workflows/update-history.yml
+++ b/.github/workflows/update-history.yml
@@ -3,10 +3,10 @@ name: Update History
 on:
   schedule:
     - cron: "0 */6 * * *" # A cada 6 horas
-  workflow_dispatch:      # Permite rodar manualmente pelo botão
+  workflow_dispatch:      # Permite rodar manualmente
 
 permissions:
-  contents: write         # Permite salvar o arquivo
+  contents: write
 
 jobs:
   update:
@@ -30,27 +30,23 @@ jobs:
       - name: Merge History
         run: node scripts/merge_history.js
 
-      - name: Debug List Files
+      - name: Debug - List Files
         run: ls -la data/
 
-      - name: Commit and Push (FORÇADO)
+      - name: Commit and Push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # 1. Baixa novidades para não travar
           git pull --rebase --autostash origin main
           
-          # 2. O COMANDO MÁGICO (-f)
-          # Isso obriga o Git a salvar o arquivo mesmo se estiver bloqueado no .gitignore
-          git add -f data/history.json
-          git add data/current.json
+          # Adiciona TUDO que estiver na pasta data (incluindo o novo ranking_history.json)
+          git add data/*
           
-          # 3. Verifica e Envia
           if git diff --staged --quiet; then
-            echo "Nenhuma mudança para salvar."
+            echo "Nada mudou."
           else
-            git commit -m "Auto: Forçando atualização do histórico [skip ci]"
+            git commit -m "Auto: Atualização de histórico v1.2.4"
             git push
           fi
         env:
