--- a/.github/workflows/main_pipeline.yml
+++ b/.github/workflows/main_pipeline.yml
@@ -2,8 +2,8 @@ name: Main Data Pipeline
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # A cada 6 horas
-  workflow_dispatch:        # Botão manual
+    - cron: '0 */6 * * *'  # Roda a cada 6 horas
+  workflow_dispatch:        # Permite rodar manualmente pelo botão
 
 permissions:
   contents: write
@@ -23,34 +23,35 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      # 1. Coleta os dados da API (Gera current.json, meta.json, monthly_stats.json)
+      # 1. Coleta e Enriquece Dados (Gera current.json, meta.json, monthly_stats.json)
       - name: Fetch Data
         run: node scripts/fetch_delegations.js
 
-      # 2. Consolida o histórico de HP (Atualiza ranking_history.json)
+      # 2. Consolida Histórico de HP (Atualiza ranking_history.json)
       - name: Merge History
         run: node scripts/merge_history.js
 
-      # 3. Gera o Relatório com IA (Lê os dados acima e gera .md)
+      # 3. Gera Relatório com IA (Se for dia de fechamento)
       - name: Generate AI Report
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: node scripts/generate_report.js
 
-      # 4. Commit Único e Atômico
+      # 4. Commit Atômico (Tudo ou Nada)
       - name: Commit and Push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # Tenta puxar mudanças remotas antes para evitar conflito
+          # Evita conflitos puxando antes
           git pull --rebase --autostash origin main
           
-          git add data/* config/lists.json reports/*.md
+          # Adiciona todos os arquivos de dados e relatórios
+          git add data/*.json config/lists.json reports/*.md
           
           if git diff --staged --quiet; then
-            echo "Nenhuma mudança nos dados."
+            echo "Nenhuma mudança detectada nos dados."
           else
-            git commit -m "Auto: Update Pipeline (Data + History + Report)"
+            git commit -m "Auto: Update Data Pipeline (v2.23.0)"
             git push
           fi
